# huffman-lempel-ziv

./: BitReader.py  IMPLEMENTATION.md  README.md  SPECIFICATION.md  TESTING.md  WEEKLY_REPORT_3.md  huffman.py  lzw.py  main.py  pyproject.toml  test_huffman.py  test_lzw.py  util.py
assets/: test1.txt  test2.txt  test4.txt  test5.txt  test6.txt  test8.txt
docs/: implementation.md  instructions.md  specification.md  testing.md  weekly_report_3.md
src/: .coverage  Node.py  lzw.py  main.py
src/assets/: test0.txt  test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test14.txt  test15.txt  test16.txt  test17.txt  test18.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt  test9.txt
src/assets/huffman/: test_calc_freqs0.txt  test_encode1.txt
